--- a/public/index.html
+++ b/public/index.html
@@ -73,3 +73,8 @@
 </body>
 
 </html>
+<!-- 
+Ctrl+K Ctrl+0 (zero) fold all
+Ctrl+K Ctrl+J unfold all -->
+<!-- 
+Don’t actually copy and paste if you’re having trouble. Just read the activity closely. Then check out the solution code and see how so much was encapsulated, all within one object in ingrdientList.js and cart.js!! -->
